2006-10-16  Daniel Steffen  <das@users.sourceforge.net>

	*** 8.4.14 TAGGED FOR RELEASE ***

	* changes: updates for 8.4.14 release.

2006-10-11  Andreas Kupries  <andreask@activestate.com>

	* generic/tclPkg.c (Tcl_PkgRequireEx): Corrected crash when
	  argument version==NULL passed in. Backport of the fix for the
	  same problem in 8.5.

2006-10-10  Don Porter  <dgp@users.sourceforge.net>

	* changes:		changes updated for 8.4.14 release.

2006-10-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/http.test: update tests to handle strictness change.

2006-10-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/rules.vc: bug #1571954: avoid /RTCc flag with MSVC8

2006-10-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/http/http.tcl (http::geturl): only do geturl url rfc
	3986 validity checking if $::http::strict is true (default false
	for 8.4).  [Bug 1560506]

	* generic/tcl.h: note limitation on changing Tcl_UniChar size
	* generic/tclEncoding.c (UtfToUnicodeProc, UnicodeToUtfProc): 
	* tests/encoding.test (encoding-16.1): fix alignment issues in
	unicode <> utf conversion procs. [Bug 1122671]

2006-10-05  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclVar.c (Tcl_LappendObjCmd):
	* tests/append.test(4.21-22): fix for longstanding [Bug 1570718],
	lappending nothing to non-list. Reported by lvirden

2006-10-02  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclFileName.c (TclGlob):	Prevent doubling of directory
	separators by [glob].  [Bug 1569042]

2006-10-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tclWinFile.c: Handle possible missing define.
	* win/tclWinFile.c: Backported fix for bug #1420432 (cannot set 
	* tests/cmdAH.test: mtime for directories on windows).

2006-09-30  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclUtil.c (Tcl_SplitList): optimisation, [Patch 1344747]
	by dgp.

2006-09-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc:  Updated MSVC build to properly deal with